--- a/index.html
+++ b/index.html
@@ -12,63 +12,59 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
-    />
+      />
   </head>
   <body>
     <main>
       <div class="container">
         <h1 class="title">Hangman</h1>
-        <div class="wrapper">
-          <svg height="400px" width="400px">
-            <line x1="40" y1="340" x2="160" y2="340"></line>
-            <line x1="80" y1="340" x2="80" y2="40"></line>
-            <line x1="60" y1="40" x2="320" y2="40"></line>
-            <line x1="80" y1="90" x2="130" y2="40"></line>
-            <line x1="300" y1="40" x2="300" y2="90"></line>
+        <div class="content">
+          <div class="svg-wrapper">
+            <svg>
+              <line x1="40" y1="340" x2="160" y2="340"></line>
+              <line x1="80" y1="340" x2="80" y2="40"></line>
+              <line x1="60" y1="40" x2="320" y2="40"></line>
+              <line x1="80" y1="90" x2="130" y2="40"></line>
+              <line x1="300" y1="40" x2="300" y2="90"></line>
 
-            <circle
-              cx="300"
-              cy="120"
-              r="30"
-              style="fill: transparent"
-              class="human hidden"
-            ></circle>
-            <line
-              x1="300"
-              y1="150"
-              x2="300"
-              y2="230"
-              class="human hidden"
-            ></line>
-            <line
-              x1="300"
-              y1="170"
-              x2="260"
-              y2="200"
-              class="human hidden"
-            ></line>
-            <line
-              x1="300"
-              y1="170"
-              x2="340"
-              y2="200"
-              class="human hidden"
-            ></line>
-            <line
-              x1="300"
-              y1="230"
-              x2="260"
-              y2="300"
-              class="human hidden"
-            ></line>
-            <line
-              x1="300"
-              y1="230"
-              x2="340"
-              y2="300"
-              class="human hidden"
-            ></line>
-          </svg>
+              <circle
+                cx="300"
+                cy="120"
+                r="30"
+                style="fill: transparent"
+                class="human hidden"></circle>
+              <line
+                x1="300"
+                y1="150"
+                x2="300"
+                y2="230"
+                class="human hidden"></line>
+              <line
+                x1="300"
+                y1="170"
+                x2="260"
+                y2="200"
+                class="human hidden"></line>
+              <line
+                x1="300"
+                y1="170"
+                x2="340"
+                y2="200"
+                class="human hidden"></line>
+              <line
+                x1="300"
+                y1="230"
+                x2="260"
+                y2="300"
+                class="human hidden"></line>
+              <line
+                x1="300"
+                y1="230"
+                x2="340"
+                y2="300"
+                class="human hidden"></line>
+            </svg>
+          </div>
           <div class="info">
             <div class="score-wrapper">
               Score
@@ -80,10 +76,12 @@
             </div>
           </div>
         </div>
-        <div class="word"></div>
-        <div class="axe">
-          <span class="axe__text">Похоже, это вообще не буква</span>
-          <img src="img/axe.svg" alt="" />
+        <div class="word-wrapper">
+          <div class="word"></div>
+        </div>
+        <div id="axe">
+          <span id="axe__text">Похоже, это вообще не буква</span>
+          <img src="img/axe.png" alt="" />
         </div>
       </div>
       <div class="alert">
