--- a/index.html
+++ b/index.html
@@ -80,12 +80,16 @@
           <div class="word"></div>
         </div>
         <div id="axe">
-          <span id="axe__text">Похоже, это вообще не буква</span>
+          <span id="axe__text"></span>
           <img src="img/axe.png" alt="" />
         </div>
       </div>
-      <div class="alert">
-        <h2>Sorry, but this screen width is not supported.</h2>
+      <div id="alert">
+        <h2>Sorry, but the site won't work because you most likely don't have a
+          keyboard on this device). 
+          <br>
+          But if you want, then click the button</h2>
+          <button id="hideAlert">Button</button>
       </div>
     </main>
     <script src="js/script.js"></script>
