--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
         </div>
         <div class="word-wrapper">
-          <div class="word"></div>
+          <div id="word" class="word"></div>
         </div>
         <div id="axe">
           <span id="axe__text"></span>
@@ -86,10 +86,10 @@
       </div>
       <div id="alert">
         <h2>Sorry, but the site won't work because you most likely don't have a
-          keyboard on this device). 
+          keyboard on this device).
           <br>
           But if you want, then click the button</h2>
-          <button id="hideAlert">Button</button>
+        <button id="hideAlert">Button</button>
       </div>
     </main>
     <script src="js/script.js"></script>
